app/assets/stylesheets/bar_back/styles/main.scss
$aubergine: #2C0D36;
$light-aubergine: #5C3C67;
$ice: #F8F8F8;
$dark-ice: #D7D7D7;
$pink: #E6A5FF;
$dark-pink: #BE8ACF;
$purple: #D04A8B;

$space-1: 10px;
$space-2: 20px;
$space-4: 40px;

$height: 45px;
$width: 70px;

$margin-top: 2px;
$margin-bottom: 22px;

$margin: 10px;

$border-radius: 5px;

$medium-breakpoint: 480px;
$large-breakpoint: 768px;

$blur: 5px;

* {
  box-sizing: border-box;
}

body {
  background-color: $aubergine;
  color: $ice;
  margin: 0;
}

@mixin mono() {
  font-family: 'JetBrains Mono', monospace;
  font-size: 1rem;
}

@mixin sans-serif() {
  font-family: 'Raleway', sans-serif;
  font-size: 1rem;
}

@mixin button() {
  @include sans-serif;
  -webkit-appearance: none;
  align-items: center;
  border-radius: $border-radius;
  border: 1px solid $ice;
  cursor: pointer;
  display: flex;
  height: $height;
  justify-content: center;
  margin: 0;
  min-width: $width;
  padding: 10px;
  text-decoration: none;
  box-shadow: 0 0 5px $ice;
}

@mixin primary-button() {
  @include button;
  background-color: $ice;
  color: $aubergine;

  &:hover, &:active {
    background-color: $dark-ice;
    border-color: $dark-ice;
  }
}

@mixin secondary-button() {
  @include button;
  background: none;
  color: $ice;
  fill: $ice;

  &:hover, &:active {
    background-color: $ice;
    color: $aubergine;
    fill: $aubergine;
  }
}

@mixin neon-text() {
  text-shadow: 1px 1px $blur $pink, -1px -1px $blur $pink, 1px -1px $blur $pink, -1px 1px $blur $pink;
}

.h1 {
  @include neon-text();
  @include sans-serif();
  font-size: 2rem;
  font-weight: lighter;
}

h2 {
  @include sans-serif();
  text-transform: uppercase;
  font-size: 1.3rem;
  font-weight: bold;
  letter-spacing: 0.2rem;
}

ul {
  padding: 0;
  margin: 0;
}

input[type="button"], input[type="submit"], span {
  @include sans-serif();
}

p {
  @include mono();
  margin: $space-2 0;
}

input[type="text"], textarea {
  @include mono();
}

.container {
  width: 90%;
  margin-right: auto;
  margin-left: auto;
}

@media only screen and (min-width: $medium-breakpoint) {
  .container {
    width: 80%;
  }
}

@media only screen and (min-width: $large-breakpoint) {
  .container {
    width: 60%;
  }
}

.hidden {
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.query-form {
  background-color: $light-aubergine;
  padding: $space-4 0;
}

.query-form__query-string {
  width: 100%;
  height: 150px;
  border: 0;
  padding: $space-1;
}

.query-form__query-name {
  width: 100%;
  margin: 0;
  margin-top: $space-1;
  border: 0;
  padding: $space-1;
  height: $height;
}

.query-form__controls {
  display: flex;
  justify-content: flex-end;
  margin-top: $space-2;
}

.query-form__submit {
  @include primary-button;
  margin-left: $margin;
}

.saved-queries {
  margin: $space-4 auto;
}

.saved-queries__item {
  margin-top: $space-2;
  list-style: none;
}

.saved-queries__header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.saved-queries__name {
  color: $ice;
  font-size: 1.3rem;
}

.saved-queries__tag {
  padding: 10px;
  border-radius: 30px;
  min-width: 80px;
  text-align: center;
}

.saved-queries__tag--public {
  background-color: $pink;
  color: $aubergine;
}

.saved-queries__tag--private {
  border: 1px solid $pink;
  color: $pink;
}

.saved-queries__string {
  white-space: pre;
  line-height: 1.7;
}

.saved-queries__delete {
  @include secondary-button;
}

.divider {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: $space-4 0;
}

.divider__line {
  height: 1px;
  background-color: $light-aubergine;
  flex: 1 1 auto;
}

.divider__icon {
  margin: 0 20px;
  color: $light-aubergine;
}

.query-form__delete {
  @include secondary-button;
  margin-right: $margin;
}

.results__header {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.control__label {
  @include secondary-button;
  margin-left: $space-2;
}

.control__link {
  text-decoration: none;
  color: inherit;
}

.results__error {
  @include sans-serif;
}

.visibility-form {
  display: flex;
  margin-top: $space-2;
}

.visibility-form__button {
  display: none;
}

.public-link__explanation {
  @include sans-serif;
  color: $dark-pink;
  line-height: 25px;
  margin-top: $space-2;
}

.visibility-form__label {
  @include sans-serif;
  align-content: center;
  align-items: center;
  background: none;
  border: 1px solid $ice;
  border-right: none;
  box-shadow: 0 0 5px $ice;
  cursor: pointer;
  display: flex;
  height: $height;
  justify-content: center;
  margin-right: -5px;
  min-width: 45px;
  padding: $space-1 15px;
}

.visibility-form__label--not-selected {
  background-color: $ice;
  color: $aubergine;
}

.visibility-form__label--selected {
  &:hover, &:active {
    background-color: $ice;
    color: $aubergine;
  }
}

.visibility-form__label:first-of-type {
  border-radius: $border-radius 0 0 $border-radius;
}

.visibility-form__label:last-of-type {
  border-radius: 0 $border-radius 5px $border-radius;
  border-right: 1px solid $ice;
}

.public-link {
  align-items: center;
  display: flex;
  margin-top: $space-2;
}

.public-link__url-container {
  align-items: center;
  border-radius: $border-radius 0 0 $border-radius;
  border: 1px solid white;
  box-shadow: 0 0 5px $ice;
  display: flex;
  flex: 1 1 auto;
  height: $height;
  min-width: 0;
  padding: 10px;
}

.public-link__url {
  @include mono;
  color: $ice;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.public-link__copy {
  @include primary-button;
  border-radius: 0 $border-radius $border-radius 0;
  flex: 0 0 auto;
}

.results {
  margin-top: $space-4;
  padding-bottom: $space-4;
}

.records {
  margin-top: $space-4;
}

.records__errors {
  @include sans-serif;
  color: $purple;
}

.records__row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}

.records__column {
  display: flex;
  flex-direction: column;
}

.records__column--header {
  flex: 0;
  padding-right: 20px;
}

.records__column--data {
  flex: 1;
}

.records__header {
  @include mono;
  align-items: center;
  display: inline-flex;
  font-weight: bold;
  height: $height;
  margin-bottom: $margin-bottom;
  margin-top: $margin-top;
  padding: 1px;
  width: 100px;
}

.records__header--error {
  margin-top: calc(#{$margin-top} + 15px);
}

.records__header:last-of-type {
  margin-bottom: 0;
}

.records__input {
  background: $light-aubergine;
  border: 1px solid white;
  color: $ice;
  height: $height;
  margin-bottom: $margin-bottom;
  margin-top: $margin-top;
  max-width: 400px;
  padding: 10px;
}

.records__input--error {
  background: $purple;
}

.records__error {
  @include sans-serif;
  font-size: 0.8rem;
}

.records__input:last-of-type {
  margin-bottom: 0;
}

.records__data {
  align-items: center;
  color: $ice;
  display: inline-flex;
  height: $height;
  margin-bottom: $margin-bottom;
  margin-top: $margin-top;
  max-width: 400px;
}

.records__create {
  @include primary-button;
}

.result__controls {
  display: flex;
  justify-content: flex-start;
  margin-top: $space-2;
}

.result__delete {
  @include secondary-button;
  margin-right: $margin;
}

.result__update {
  @include primary-button;
  margin-left: $margin;
}

.footer {
  background-color: $light-aubergine;
  padding: $space-4 0;
}

.footer__container {
  text-align: center;
}

.footer__text {
  @include sans-serif;
  margin-top: $space-4;
  font-weight: lighter;
}

.footer__link {
  color: $ice;
}

.error {
  margin-top: $space-4;
}

.error__message {
  @include sans-serif;
}

.logo {
  display: block;
  margin: auto;
  width: 115px;

  @media (prefers-reduced-motion: no-preference) {
    &:hover {
      animation: flicker 3s infinite step-end;
    }
  }
}

.logo--bigger {
  width: 200px;
}

@keyframes flicker {
  0%    { opacity: 1; }
  3%    { opacity: 0.4; }
  6%    { opacity: 1; }
  7%    { opacity: 0.4; }
  8%    { opacity: 1; }
  9%    { opacity: 0.4; }
  10%   { opacity: 1; }
  89%   { opacity: 1; }
  90%   { opacity: 0.4; }
  100%  { opacity: 0.4; }
}

.logo--error {
  width: 200px;
  right: 20px;
  transform: rotate(20deg) translate(0%, 0);
  transform-origin: top left;

  @media (prefers-reduced-motion: no-preference) {
    animation: flicker 3s infinite step-end;
  }
}

.not-found__logo-container {
  margin-left: 30%;
}

.not-found__error {
  @extend h2;
  @include neon-text;
  font-weight: lighter;
  margin: $space-2 0 $space-4 0;
}

.not-found__explanation {
  line-height: 2;
}

.not-found__link {
  color: $ice;
}

.saved-queries__tag {
  display: flex;
  align-items: center;
}

.icon {
  background-repeat: no-repeat;
  display: inline-block;
  height: 20px;
  width: 25px;
  margin-right: 5px;
  fill: inherit;

  svg {
    width: 100%;
    height: 100%;
  }
}

.icon--eye {
  height: 25px;
  fill: $aubergine;
}

.icon--lock {
  fill: $pink;
}

.icon--create {
  height: 25px;
}

.icon--divider {
  fill: $light-aubergine;
}

.results__controls {
  display: flex;
}

